# henactor

./: .eslintrc.json  .gitignore  .prettierignore  .prettierrc  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts
.github/workflows/: docs.yaml
docs/: book.toml
docs/src/: SUMMARY.md  commands.md  customizing.md  filtering.md
docs/src/customizing/: icons.md
docs/src/customizing/icons/: icon-string.md  ui-icons.md
src/: App.tsx  app.css  app.html  hooks.client.ts  i18next.d.ts  resources.d.ts  type.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: cache.rs  config.rs  directory.rs  file_system.rs  fs.rs  lib.rs  main.rs  open.rs  pins.rs  task.rs  utils.rs
src-tauri/src/config/: commands.rs  default.rs  error.rs
src-tauri/src/config/default/: color_scheme.rs  fonts.rs  icons.rs  pins.rs
src-tauri/src/directory/: error.rs
src-tauri/src/file_system/: directory.rs  error.rs
src-tauri/src/fs/: entry.rs  filter.rs  mod.rs  sort.rs  watch.rs
src-tauri/src/fs/filter/: eval.rs  parser.rs
src-tauri/src/fs/query/: ast.rs  eval.rs  mod.rs  parser.rs  query.pest
src/components/: Theme.tsx
src/components/atoms/ClickablePath/: ClickablePath.styles.tsx  ClickablePath.tsx
src/components/atoms/EditablePath/: EditablePath.styles.tsx  EditablePath.tsx
src/context/: IconsContext.tsx  PathContext.tsx  ThemeContext.tsx  ViewContext.tsx
src/lib/: app.svelte.ts  app.test.ts  collector.ts  config.svelte.ts  config.ts  fs.ts  icon.ts  index.ts  keybindings.ts  locale.svelte.ts  locale.ts  modal_manager.ts  tabs.svelte.ts  tabs.test.ts  utils.ts
src/lib/commands/: explorer.ts  fs.ts  index.ts  misc.ts  navigate.ts  open.ts  tabs.ts
src/lib/components/: breadcrumb.svelte  explorer.svelte  filter-box.svelte  icon.svelte  input-popover.svelte  keybind.svelte  keybinder.svelte  keylistener.svelte  modal.svelte  modals.svelte  navigation.svelte  pin.svelte  search-result.svelte  sidebar.svelte  status-bar.svelte  tool-bar.svelte  truncate.svelte
src/lib/locale/: en.json  pt-BR.json
src/lib/services/: command_register.svelte.ts  config_manager.svelte.ts  filesystem_actions.svelte.ts  index.ts  locale.svelte.ts  modal_manager.ts  observer.ts  opener.ts  tabs_manager.svelte.ts  tabs_manager.test.ts  task_manager.svelte.ts
src/routes/: +layout.svelte  +page.svelte
src/services/: config.ts  file_system.ts  fonts.ts  icons.ts  pallete.ts  pins.ts
src/services/config/: fonts.ts  icons.ts  theme.ts
src/utils/: date.ts
(+174 files in other folders)
