[package]
name = "henactor"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "henactor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = ["protocol-asset"] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = "=2.0.0-rc.20"
specta-typescript = "0.0.7"
tauri-specta = { version = "=2.0.0-rc.20", features = ["derive", "typescript"] }
directories = "5.0.1"
log = "0.4.22"
notify = "6.1.1"
rand = "0.8.5"
thiserror = "1.0.64"
confy = "0.6.1"
sha2 = "0.10.8"
base64ct = { version = "1.6.0", features = [ "std"] }
reqwest = { version = "0.12.7", features = ["blocking"] }
fs_extra = "1.3.0"
mime_guess = "2.0.5"
toml = "0.8.19"
anyhow = "1.0.89"
tauri-plugin-log = "2.0.0-rc"
pest = "2.7.15"
pest_derive = "2.7.15"
regex = "1.11.1"
bytesize = "1.3.0"
humantime = "2.1.0"
trash = "5.2.2"
open = "5.3.2"
walkdir = "2.5.0"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-cli = "2.0.0-rc"

[dev-dependencies]
tempfile = "3.12.0"
